--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 <body>
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
-  Absolute Path (external link)
-
+  <p>
+  <a href="https://www.nyc.gov">Absolute Path (external link)</a>
+</p>
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
-  Relative Path (internal link)
-
+<p>
+  <a href="about.html" target="_blank">  Relative Path (internal link)</a>
+</p> 
+<p>
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
-  <img src="https://ironboard-learn.s3.amazonaws.com/Image_61_lion.jpg" alt="Image by Alexas Fotos from Pixabay">
-
+  <a href = "https://www.detroitlions.com/" target="_blank"><img src="https://ironboard-learn.s3.amazonaws.com/Image_61_lion.jpg" alt="Image by Alexas Fotos from Pixabay"></a>
+</p>
 </body>
 </html>
